--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_API_URL = 'https://twp-server.onrender.com'
+# REACT_APP_API_URL = 'https://twp-server.onrender.com'
+REACT_APP_API_URL = 'http://localhost:5000'
