--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-material-ui-carousel": "^3.4.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.1",
     "react-scripts": "5.0.1",
